product_docs/docs/edb-postgres-ai/1.4/hybrid-manager/install/configuration/sync_images.mdx
---
title: Syncing images to a local private registry
description: Mirror EDB Postgres AI container images to your internal registry for security and reliability.
deepToC: true
---

**Related installation phase:** [Phase 4: Preparing the Environment](/edb-postgres-ai/current/hybrid-manager/install/install_guide/environment_prep/)

### Prerequisites

-   [**`edbctl` CLI tool**](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/edbctl/) installed and configured.

-   A valid [**EDB Repos 2.0 Token**](https://www.enterprisedb.com/docs/repos/getting_started/).

-   Write access to your target local private registry (examples: AWS ECR, Google Artifact Registry, Harbor).

* * *

Hosting images internally ensures:

-   **Security & compliance:** You control the scanning and approval of artifacts.

-   **Reliability:** Your deployment is not dependent on external internet connectivity or third-party uptime.

-   **Performance:** Lower latency for cluster nodes pulling images.

This process uses the `edbctl` tool to copy artifacts from EDB Repos 2.0 to your private registry while preserving SHA256 digests.

The software stack of HM is pushed into EDB Repos 2.0 registry to provide artifacts for you to use in your local private registry: customer-managed internal registry for RHOS or Rancher RKE2 on-premises scenarios, or a self-managed registry on your cloud service provider (CSP) registry [AWS Elastic Container Registry](https://aws.amazon.com/ecr/) (ECR), [Google Cloud Artifact Registry](https://cloud.google.com/artifact-registry/docs) (GAR), or [Azure Container Registry](https://azure.microsoft.com/en-us/products/container-registry) (ACR) for HM on CSP scenarios.

Before you begin, ensure you have a secure, approved private registry ready to host the container images. 

You need the registry's URI, along with a username and password (or token) that has write access. 
Additionally, confirm the specific version of EDB Postgres AI you intend to install.

Using these credentials, the sync process copies all necessary artifacts from EDB Repos 2.0 directly into your local private registry, ensuring they are available for your Helm chart installation or upgrade.

### Configure sync variables

**Required Information:**

-   **Release Version:** The tag of Hybrid Manager (HM) you intend to install (example:`v2026.5.1`).
-   **EDB Token:** Your access token for `docker.enterprisedb.com`.
-   **Local Registry:** The URI and credentials for your organization's registry.

1.  Define the EDB release version

    ```bash
    export EDBPGAI_RELEASE=<EDB-pgai-release-version>
    ```

2.  Define EDB credentials (Source)

    ```
    export CS_EDB_TOKEN=<your-edb-repos-token>
    export EDB_SOURCE_REGISTRY=pgai-platform
    ```

3.  Define private registry credentials (Destination)

    ```
    export LOCAL_REGISTRY_URI=<your_local_container_registry_uri>
    export LOCAL_REGISTRY_USER=<your_local_registry_user>
    export LOCAL_REGISTRY_PWD=<your_local_registry_password>
    ```

!!!Note

**Cloud Registries:** If you are using AWS ECR, Google Artifact Registry, or Azure ACR, ensure your local environment is authenticated (e.g., via `aws ecr get-login-password`) and that your `LOCAL_REGISTRY_PWD` reflects a valid token.
!!!

### Sync platform images

Execute the following command to sync the platform images and the operator artifacts in a single step:

```bash
edbctl image sync-to-local-registry \
    --destination-registry-uri "${LOCAL_REGISTRY_URI}" \
    --version "${EDBPGAI_RELEASE}" \
    --source-registry-username "${EDB_SOURCE_REGISTRY}" \
    --source-registry-password "${CS_EDB_TOKEN}" \
    --destination-registry-username "${LOCAL_REGISTRY_USER}" \
    --destination-registry-password "${LOCAL_REGISTRY_PWD}"
```

The command mirrors the following artifacts to your private registry:

- **Platform images** — Portal, Beacon, Transporter, and other HM components.
- **Operator manager image** — `edb-hcp-operator` controller image.
- **Operator bundle image** — OCP-certified bundle, used to build self-hosted OperatorHub catalogs in air-gapped OpenShift clusters.
- **Operator helm chart** — `edb-hcp-operator` chart, mirrored as an OCI artifact alongside the images.


### Update configuration

Once the sync is complete, you must configure HM to pull images from your private registry.

Edit your `HybridControlPlane` CR to set `spec.imageRegistry` to your private registry URI:

```yaml
apiVersion: edbpgai.edb.com/v1alpha1
kind: HybridControlPlane
metadata:
  name: edbpgai
spec:
  imageRegistry: "<your_local_container_registry_uri>"
  # ... your other spec fields
```

Apply the updated CR:

```bash
kubectl apply -f hybridmanager.yaml
```

### Next steps

With your images synced and your configuration updated, you are ready to proceed with the installation.

**Return to [Phase 4: Preparing your Environment](../install_guide/environment_prep) or [Phase 5: Installing Hybrid Manager](../install_guide/installing/install_hm).**
